--- a/demo/index.html
+++ b/demo/index.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     Lorem ipsum soler dalssda asdams
-    <img src="https://live.staticflickr.com/4129/5203635748_eaa4982129_b.jpg" alt="Running Out of Time" id="project1">
+    <a href="project1.html">
+      <img src="https://live.staticflickr.com/4129/5203635748_eaa4982129_b.jpg" alt="Running Out of Time" id="project1">
+    </a>
     <p style="font-size: 0.9rem;font-style: italic;"><span> by <a href="https://www.flickr.com/photos/24742305@N00">John-Morgan</a></span> is licensed under <a href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html" style="margin-right: 5px;">CC BY 2.0</a><a href="https://creativecommons.org/licenses/by/2.0/?ref=ccsearch&atype=html" target="_blank" rel="noopener noreferrer" style="display: inline-block;white-space: none;margin-top: 2px;margin-left: 3px;height: 22px !important;"><img style="height: inherit;margin-right: 3px;display: inline-block;" src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=a1e93ef2-a88e-4282-a47f-befc8dd5d9ab" /><img style="height: inherit;margin-right: 3px;display: inline-block;" src="https://search.creativecommons.org/static/img/cc-by_icon.svg" /></a></p>
   </body>
 </html>
