--- a/demo/index.html
+++ b/demo/index.html
@@ -3,13 +3,15 @@
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>
-      DEMO PAGE
+      Juliana's Portfolio
     </title>
   </head>
   <body>
-    Lorem ipsum soler dalssda asdams
+    <p id="one">Hello, I'm Juliana</p>
+    <p id="two">I'm an Animation and Motion Graphics student at BMCC. Here you will find a collection of my work. More to come soon!</p>
     <a href="project1.html">
-    <img src="https://live.staticflickr.com/4129/5203635748_eaa4982129_b.jpg" alt="Running Out of Time" id="project1">
+        <img src="https://live.staticflickr.com/4025/4654093920_6d99aef4c9_b.jpg" height="500" alt="Project 1" class="center">    
     </a>
+      <p class="center">"Night light - canon eos 550d" by @Doug88888 is licensed under CC BY-NC-SA 2.0</p>
   </body>
 </html>
