--- a/demo/project1.html
+++ b/demo/project1.html
@@ -7,6 +7,6 @@
     </title>
   </head>
   <body>
-    This page will contain further detail on Project 1
+    <p class="center">This page will contain further detail on Project 1. Stay tuned!</p>
   </body>
 </html>
