--- a/demo/project1.html
+++ b/demo/project1.html
@@ -7,6 +7,7 @@
     </title>
   </head>
   <body>
-    <p class="center">This page will contain further detail on Project 1. Stay tuned!</p>
+    <p id="one">This page will contain further detail on Project 1</p>
+    <p id="two">Stay tuned!</p>
   </body>
 </html>
