--- a/demo/index.html
+++ b/demo/index.html
@@ -10,7 +10,7 @@
     <p id="one">Hello, I'm Juliana</p>
     <p id="two">I'm an Animation and Motion Graphics student at BMCC. Here you will find a collection of my work. More to come soon!</p>
     <a href="project1.html">
-        <img src="https://live.staticflickr.com/4025/4654093920_6d99aef4c9_b.jpg" height="500" alt="Project 1" class="center">    
+        <img src="https://live.staticflickr.com/4025/4654093920_6d99aef4c9_b.jpg" alt="Project 1" class="center">    
     </a>
       <p class="center">"Night light - canon eos 550d" by @Doug88888 is licensed under CC BY-NC-SA 2.0</p>
   </body>
