--- a/demo/index.html
+++ b/demo/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>JF Gallery</title>
         
-        <link rel="stylesheet" href="stylesheet.css">
+        <link rel="stylesheet" href="style.css">
         
         <script src="https://kit.fontawesome.com/8c2a9d5424.js" crossorigin="anonymous"></script>
     </head>
