--- a/demo/digitalArt.html
+++ b/demo/digitalArt.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>JF Gallery</title>
+        <title>Digital Art</title>
         
         <link rel="stylesheet" href="style.css">
         
