--- a/demo/digitalArt.html
+++ b/demo/digitalArt.html
@@ -11,7 +11,7 @@
     <body>
         <!-- HEADER-->
         <div class="header">
-            <p id="headText">Digital Art</p>
+            <p id="headText">Juliana's Portfolio</p>
         </div>
         <!--HEADER-->
         
